cmake_minimum_required(VERSION 3.27)
project(408Code C)

set(CMAKE_C_STANDARD 99)

add_executable(QuicklySort DS/Sort/QuicklySort.c)
add_executable(StackTest ./DS/StackAndQueue/StackTest.c)
add_executable(QueueTest ./DS/StackAndQueue/QueueTest.c)
add_executable(TreeTest ./DS/Tree/TreeTest.c)
add_executable(parenthesisMatch ./DS/StackAndQueue/parenthesisMatch.c)
add_executable(UFSet ./DS/Tree/UFSet.c)
add_executable(SortTest ./DS/Sort/SortTest.c)
add_executable(2010 ./DS/algorithm/2010.c)
add_executable(2011 ./DS/algorithm/2011.c)
add_executable(2013 ./DS/algorithm/2013.c)
add_executable(2018 DS/algorithm/2018.c)